# skill_manager

./: .gitignore  README.md  debug-click-no-response.md  fix_app_test.cjs  fix_app_test_roles.cjs  fix_delete.cjs  fix_delete2.cjs  fix_final.cjs  package-lock.json  package.json  patch_rust.cjs  playwright.config.ts  preview.html  pure_frontend_preview.html  run_test.js  test_click.mjs  test_click.py  test_delete.js  test_fix_app.cjs  test_rust  test_rust.rs  verify_fix.mjs  vite.config.ts
.dbg/: click-no-response.env  trae-debug-log-click-no-response.ndjson
.trae/documents/: skills_test_plan.md
skills/query-date/: SKILL.md
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  linker.rs  marketplace.rs  skills.rs
src/components/: AgentFormModal.tsx  AgentIcon.tsx  MarketplaceView.tsx  PlaceholderView.tsx  Sidebar.tsx  SkillConfigModal.tsx  SkillsView.tsx  ToolFormModal.tsx  ToolIcon.tsx  ToolsView.tsx
src/lib/: api.ts  mockApi.ts  permissions.ts
src/store/: index.ts  workspaceSlice.ts
src/test/: setup.ts
src/views/: AgentsView.tsx  MarketplaceView.test.tsx  MarketplaceView.tsx  SkillsView.tsx  ToolsView.tsx
tests/e2e/: agents.spec.ts  skills.spec.ts  tools.spec.ts
